fix(c-toolbar): Possibility to override z-index

--- a/packages/csc-ui/src/components/c-toolbar/c-toolbar.scss
+++ b/packages/csc-ui/src/components/c-toolbar/c-toolbar.scss
@@ -6,6 +6,8 @@
   --_c-toolbar-background-color: var(--c-toolbar-background-color, var(--c-white));
   --_c-toolbar-text-color: var(--c-toolbar-text-color, var(--c-text-system));
 
+  z-index: 1;
+
   .c-toolbar {
     align-items: center;
     background: var(--_c-toolbar-background-color);
@@ -18,7 +20,6 @@
     padding-right: 16px;
     position: fixed;
     width: 100%;
-    z-index: 9;
   }
 
   .spacer {
